# traceback

./: .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  DESIGN.md  MEMBER3_BACKEND_README.md  Makefile  PRODUCT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  config.py  db.py  embedding.py  main.py  pdf.py  persistence.py  retrieval.py  storage.py
apps/api/app/api/: analysis.py  concept_details.py  decks.py  flashcards.py  health.py  jobs.py  learning.py  matches.py  notebook_analysis.py  notebook_flashcards.py  sessions.py  shared_study_sets.py  uploads.py
apps/api/app/core/: config.py
apps/api/app/schemas/: analysis.py  concept_details.py  deck.py  flashcards.py  health.py  job.py  learning.py  match.py  notebook_analysis.py  notebook_flashcards.py  session.py  upload.py
apps/api/app/services/: concept_details.py  concept_graph.py  flashcards.py  notebook_flashcards.py
apps/api/app/services/image_processing/: preprocess.py
apps/api/app/services/notebook_analysis/: analyzer.py  arrows.py  ocr.py  (+6 more)
apps/api/tests/: conftest.py  test_analysis.py  test_analysis_cleanup.py  test_analysis_handoff.py  test_arrow_detection.py  test_concept_details.py  test_concept_graph.py  test_config.py  test_confirmation.py  test_embedding.py  test_flashcards.py  test_gemini.py  test_health.py  test_image_preprocessing.py  test_interactive_highlights.py  test_jobs.py  test_learning.py  test_marker_detection.py  test_member4_demo_flow.py  test_notebook_analysis.py  test_notebook_flashcards.py  test_openai_vision.py  test_paddleocr.py  test_pdf.py  test_persistence.py  test_retrieval.py  test_sessions.py  test_storage.py  test_uploads.py
(+50 files in other folders)
