[project]
name = "traceback-api"
version = "0.1.0"
description = "Traceback FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2,<2",
    "fastapi>=0.115,<1",
    "opencv-python-headless>=4.10,<5",
    "openai>=2,<3",
    "pillow>=11,<12",
    "PyMuPDF>=1.24,<2",
    "psycopg[binary]>=3.2,<4",
    "python-multipart>=0.0.20,<1",
    "pydantic-settings>=2.7,<3",
    "uvicorn[standard]>=0.34,<1",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "google-genai>=2.12.1",
]

[dependency-groups]
dev = [
    "httpx2>=1,<3",
    "pyright>=1.1.400,<2",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
include = ["app"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
